[gd_scene load_steps=8 format=3 uid="uid://ceupt74uc3cms"]

[ext_resource type="Script" uid="uid://b78q1qwqqi0y7" path="res://scenes/settings/settings_menu.gd" id="1_itqk5"]
[ext_resource type="Shader" uid="uid://eaifvnliebm0" path="res://scenes/pause/pause_menu.gdshader" id="2_8him4"]
[ext_resource type="PackedScene" uid="uid://dt5nkgvsx5hdo" path="res://scenes/volume_slider/volume_slider.tscn" id="3_0jars"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ntjm"]
shader = ExtResource("2_8him4")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_0yh55"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iilpo"]
resource_name = "blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 0.8, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0yh55"]
_data = {
&"RESET": SubResource("Animation_0yh55"),
&"blur": SubResource("Animation_iilpo")
}

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_itqk5")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6ntjm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Settings"

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Contents" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SettingsVBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Contents"]
unique_name_in_owner = true
layout_mode = 2

[node name="ToggleMusic" type="CheckButton" parent="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Music"

[node name="ToggleSFX" type="CheckButton" parent="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Sound Effects"

[node name="Fullscreen" type="CheckButton" parent="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="MasterLabel" type="Label" parent="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="Master" parent="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer" instance=ExtResource("3_0jars")]
layout_mode = 2
bus_name = "Master"

[node name="MusicLabel" type="Label" parent="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="Music" parent="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer" instance=ExtResource("3_0jars")]
layout_mode = 2
bus_name = "Music"

[node name="SFXLabel" type="Label" parent="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer"]
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFX" parent="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer" instance=ExtResource("3_0jars")]
layout_mode = 2
bus_name = "SFX"

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Panel" type="MarginContainer" parent="PanelContainer/MarginContainer/Contents"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SFXButton" type="Button" parent="PanelContainer/MarginContainer/Contents/Panel"]
layout_mode = 2
text = "Test Sound Effect"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0yh55")
}

[connection signal="pressed" from="PanelContainer/MarginContainer/Contents/SettingsVBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Contents/Panel/SFXButton" to="." method="_on_sfx_button_pressed"]
